fix: Fix `isBlank` call to be Java 8 compatible (box/box-codegen#830)